# upd-163-capstone

./: Cargo.toml
benches/: criterion.rs  iai.rs
src/: file_io.rs  lib.rs  main.rs
src/geometry/: lights.rs  material.rs  mod.rs  shapes.rs
src/primitives/: camera.rs  matrix4.rs  mod.rs  point3.rs  ray.rs  vector3.rs
src/raytracer/: color.rs  data.rs  intersect.rs  mod.rs  render.rs
src/test_scenes/: scene00.test  scene07.test
